--- a/roles/homer/templates/config.yml.j2
+++ b/roles/homer/templates/config.yml.j2
@@ -1,7 +1,7 @@
 ---
 title: {{ homer_title }}
 subtitle: {{ homer_subtitle }}
-logo: "/assets/tools/homer-icons/logo.jpg"
+logo: "/assets/tools/homer-icons/logo.png"
 
 stylesheet:
   - "assets/custom.css"
@@ -77,26 +77,12 @@ services:
         endpoint: "{{ item.endpoint }}"
         target: "_blank"
   {% endfor %}
-    - name: "FRITZ!Box"
+    - name: "SWAG Dashboard"
         type: Ping
-        logo: /assets/tools/homer-icons/fritzbox.png
-        url: "http://fritz.box/"
-        endpoint: "http://{{ ansible_default_ipv4.address }}:3000/http://fritz.box"
+        logo: /assets/tools/homer-icons/linuxserver.png
+        url: "https://dashboard.{{ host_local }}"
+        endpoint: "https://dashboard.{{ host_local }}"
         target: "_blank"
-      - name: "PiKVM"
-        type: Ping
-        logo: /assets/tools/homer-icons/pikvm.png
-        url: "http://pikvm.box/"
-        endpoint: "http://{{ ansible_default_ipv4.address }}:3000/http://pikvm.box"
-        target: "_blank"
-      - name: "PiHole"
-        type: Ping
-        logo: /assets/tools/homer-icons/pihole.png
-        url: "http://192.168.178.34:81"
-        endpoint: "http://192.168.178.34:81"
-        target: "_blank"
-
-
 
   - name: "Home Automation"
     icon: "fas fa-home"
@@ -111,4 +97,15 @@ services:
 
   {% endfor %}
 
-
+  #- name: "PiKVM"
+  #  type: Ping
+  #  logo: /assets/tools/homer-icons/pikvm.png
+  #  url: "http://pikvm.box/"
+  #  endpoint: "http://{{ ansible_default_ipv4.address }}:3000/http://pikvm.box"
+  #  target: "_blank"
+  #- name: "PiHole"
+  #  type: Ping
+  #  logo: /assets/tools/homer-icons/pihole.png
+  #  url: "http://192.168.178.34:81"
+  #  endpoint: "http://192.168.178.34:81"
+  #  target: "_blank"
