--- a/roles/homer/templates/config.yml.j2
+++ b/roles/homer/templates/config.yml.j2
@@ -43,69 +43,54 @@ services:
   - name: "Media"
     icon: "fas fa-photo-video"
     items:
-  {% for item in web_applications if "media" in item.category and item.url != "" %}
-    - name: "{{ item.name }}"
-        type: Ping
+{% for item in web_applications if "media" in item.category and item.url != "" %}
+      - name: "{{ item.name }}"
         logo: "{{ item.logo }}"
         url: "{{ item.url }}"
-        endpoint: "{{ item.endpoint }}"
         target: "_blank"
-
-  {% endfor %}
+{% endfor %}
 
   - name: "Services"
     icon: "fas fa-stream"
     items:
-  {% for item in web_applications if "services" in item.category and item.url != "" %}
-    - name: "{{ item.name }}"
-        type: Ping
+{% for item in web_applications if "services" in item.category and item.url != "" %}
+      - name: "{{ item.name }}"
         logo: "{{ item.logo }}"
         url: "{{ item.url }}"
-        endpoint: "{{ item.endpoint }}"
         target: "_blank"
-
-  {% endfor %}
+{% endfor %}
 
   - name: "System"
     icon: "fas fa-cog"
     items:
-  {% for item in web_applications if "system" in item.category and item.url != "" %}
-    - name: "{{ item.name }}"
-        type: Ping
+{% for item in web_applications if "system" in item.category and item.url != "" %}
+      - name: "{{ item.name }}"
         logo: "{{ item.logo }}"
         url: "{{ item.url }}"
-        endpoint: "{{ item.endpoint }}"
         target: "_blank"
-  {% endfor %}
-    - name: "SWAG Dashboard"
-        type: Ping
+{% endfor %}
+      - name: "SWAG Dashboard"
         logo: /assets/tools/homer-icons/linuxserver.png
         url: "https://dashboard.{{ host_local }}"
-        endpoint: "https://dashboard.{{ host_local }}"
+        target: "_blank"
+      - name: "PiHole"
+        logo: /assets/tools/homer-icons/pihole.png
+        url: "http://192.168.1.2/admin"
         target: "_blank"
 
   - name: "Home Automation"
     icon: "fas fa-home"
     items:
-  {% for item in web_applications if "smarthome" in item.category and item.url != "" %}
-    - name: "{{ item.name }}"
-        type: Ping
+{% for item in web_applications if "smarthome" in item.category and item.url != "" %}
+      - name: "{{ item.name }}"
         logo: "{{ item.logo }}"
         url: "{{ item.url }}"
-        endpoint: "{{ item.endpoint }}"
         target: "_blank"
+{% endfor %}
 
-  {% endfor %}
+#- name: "PiKVM"
+#  logo: /assets/tools/homer-icons/pikvm.png
+#  url: "http://pikvm.box/"
+#  target: "_blank"
 
-  #- name: "PiKVM"
-  #  type: Ping
-  #  logo: /assets/tools/homer-icons/pikvm.png
-  #  url: "http://pikvm.box/"
-  #  endpoint: "http://{{ ansible_default_ipv4.address }}:3000/http://pikvm.box"
-  #  target: "_blank"
-  #- name: "PiHole"
-  #  type: Ping
-  #  logo: /assets/tools/homer-icons/pihole.png
-  #  url: "http://192.168.178.34:81"
-  #  endpoint: "http://192.168.178.34:81"
-  #  target: "_blank"
+
