--- a/roles/monitoring/telegraf/templates/telegraf.conf.j2
+++ b/roles/monitoring/telegraf/templates/telegraf.conf.j2
@@ -167,6 +167,74 @@
   ## The typical use case is for LVM volumes, to get the VG/LV name instead of
   ## the near-meaningless DM-0 name.
   # name_templates = ["$ID_FS_LABEL","$DM_VG_NAME/$DM_LV_NAME"]
+[[inputs.docker]]
+  ## Docker Endpoint
+  ##   To use TCP, set endpoint = "tcp://[ip]:[port]"
+  ##   To use environment variables (ie, docker-machine), set endpoint = "ENV"
+  endpoint = "unix:///var/run/docker.sock"
+  #
+  ## Set to true to collect Swarm metrics(desired_replicas, running_replicas)
+  gather_services = false
+  #
+  ## Only collect metrics for these containers, collect all if empty
+  container_names = []
+  #
+  ## Set the source tag for the metrics to the container ID hostname, eg first 12 chars
+  source_tag = false
+  #
+  ## Containers to include and exclude. Globs accepted.
+  ## Note that an empty array for both will include all containers
+  container_name_include = []
+  container_name_exclude = []
+  #
+  ## Container states to include and exclude. Globs accepted.
+  ## When empty only containers in the "running" state will be captured.
+  ## example: container_state_include = ["created", "restarting", "running", "removing", "paused", "exited", "dead"]
+  ## example: container_state_exclude = ["created", "restarting", "running", "removing", "paused", "exited", "dead"]
+  # container_state_include = []
+  # container_state_exclude = []
+  #
+  ## Timeout for docker list, info, and stats commands
+  timeout = "5s"
+  #
+  ## Whether to report for each container per-device blkio (8:0, 8:1...),
+  ## network (eth0, eth1, ...) and cpu (cpu0, cpu1, ...) stats or not.
+  ## Usage of this setting is discouraged since it will be deprecated in favor of 'perdevice_include'.
+  ## Default value is 'true' for backwards compatibility, please set it to 'false' so that 'perdevice_include' setting
+  ## is honored.
+  perdevice = true
+  #
+  ## Specifies for which classes a per-device metric should be issued
+  ## Possible values are 'cpu' (cpu0, cpu1, ...), 'blkio' (8:0, 8:1, ...) and 'network' (eth0, eth1, ...)
+  ## Please note that this setting has no effect if 'perdevice' is set to 'true'
+  # perdevice_include = ["cpu"]
+  #
+  ## Whether to report for each container total blkio and network stats or not.
+  ## Usage of this setting is discouraged since it will be deprecated in favor of 'total_include'.
+  ## Default value is 'false' for backwards compatibility, please set it to 'true' so that 'total_include' setting
+  ## is honored.
+  total = false
+  #
+  ## Specifies for which classes a total metric should be issued. Total is an aggregated of the 'perdevice' values.
+  ## Possible values are 'cpu', 'blkio' and 'network'
+  ## Total 'cpu' is reported directly by Docker daemon, and 'network' and 'blkio' totals are aggregated by this plugin.
+  ## Please note that this setting has no effect if 'total' is set to 'false'
+  # total_include = ["cpu", "blkio", "network"]
+  #
+  ## Which environment variables should we use as a tag
+  ##tag_env = ["JAVA_HOME", "HEAP_SIZE"]
+  #
+  ## docker labels to include and exclude as tags.  Globs accepted.
+  ## Note that an empty array for both will include all labels as tags
+  docker_label_include = []
+  docker_label_exclude = []
+  #
+  ## Optional TLS Config
+  # tls_ca = "/etc/telegraf/ca.pem"
+  # tls_cert = "/etc/telegraf/cert.pem"
+  # tls_key = "/etc/telegraf/key.pem"
+  ## Use TLS but skip chain & host verification
+  # insecure_skip_verify = false
 [[inputs.mem]]
   # no configuration
 [[inputs.net]]
@@ -183,8 +251,58 @@
   ##
 [[inputs.processes]]
   # no configuration
+[[inputs.smart]]
+    ## Optionally specify the path to the smartctl executable
+    # path_smartctl = "/usr/bin/smartctl"
+
+    ## Optionally specify the path to the nvme-cli executable
+    # path_nvme = "/usr/bin/nvme"
+
+    ## Optionally specify if vendor specific attributes should be propagated for NVMe disk case
+    ## ["auto-on"] - automatically find and enable additional vendor specific disk info
+    ## ["vendor1", "vendor2", ...] - e.g. "Intel" enable additional Intel specific disk info
+    # enable_extensions = ["auto-on"]
+
+    ## On most platforms used cli utilities requires root access.
+    ## Setting 'use_sudo' to true will make use of sudo to run smartctl or nvme-cli.
+    ## Sudo must be configured to allow the telegraf user to run smartctl or nvme-cli
+    ## without a password.
+    use_sudo = true
+
+    ## Skip checking disks in this power mode. Defaults to
+    ## "standby" to not wake up disks that have stopped rotating.
+    ## See --nocheck in the man pages for smartctl.
+    ## smartctl version 5.41 and 5.42 have faulty detection of
+    ## power mode and might require changing this value to
+    ## "never" depending on your disks.
+    # nocheck = "standby"
+
+    ## Gather all returned S.M.A.R.T. attribute metrics and the detailed
+    ## information from each drive into the 'smart_attribute' measurement.
+    # attributes = false
+
+    ## Optionally specify devices to exclude from reporting if disks auto-discovery is performed.
+    # excludes = [ "/dev/pass6" ]
+
+    ## Optionally specify devices and device type, if unset
+    ## a scan (smartctl --scan and smartctl --scan -d nvme) for S.M.A.R.T. devices will be done
+    ## and all found will be included except for the excluded in excludes.
+    # devices = [ "/dev/ada0 -d atacam", "/dev/nvme0"]
+
+    ## Timeout for the cli command to complete.
+    # timeout = "30s"
+
+    ## Optionally call smartctl and nvme-cli with a specific concurrency policy.
+    ## By default, smartctl and nvme-cli are called in separate threads (goroutines) to gather disk attributes.
+    ## Some devices (e.g. disks in RAID arrays) may have access limitations that require sequential reading of
+    ## SMART data - one individual array drive at the time. In such case please set this configuration option
+    ## to "sequential" to get readings for all drives.
+    ## valid options: concurrent, sequential
+    # read_method = "concurrent"
 [[inputs.swap]]
   # no configuration
 [[inputs.system]]
   ## Uncomment to remove deprecated metrics.
   # fielddrop = ["uptime_format"]
+[[inputs.temp]]
+  # no configuration
