--- a/roles/network/swag/templates/nginx/internal.j2
+++ b/roles/network/swag/templates/nginx/internal.j2
@@ -1,6 +1,7 @@
 
     listen 443 ssl;
     allow {{ lan_network }};
+    allow {{ wireguard_subnet }};
     deny all;
     include /config/nginx/ssl.conf;
     client_max_body_size 0;
