--- a/roles/network/swag/templates/public/nextcloud.subdomain.conf.j2
+++ b/roles/network/swag/templates/public/nextcloud.subdomain.conf.j2
@@ -10,10 +10,14 @@ server {
     client_max_body_size 0;
 
     # enable for Authelia
-    #include /config/nginx/authelia-server.conf;
+    include /config/nginx/authelia-server.conf;
 
     location / {
         {% include "nginx/cors.j2" %}
+
+        # enable for Authelia
+        include /config/nginx/authelia-location.conf;
+
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
         set $upstream_app nextcloud;
