--- a/roles/filesystems/mergerfs/templates/mergerfs-uncache.j2
+++ b/roles/filesystems/mergerfs/templates/mergerfs-uncache.j2
@@ -1,8 +1,8 @@
 #!/usr/bin/python3
 import argparse
-import logging
 import shutil
 import subprocess
+import syslog
 import time
 from pathlib import Path
 
@@ -66,14 +66,6 @@ if __name__ == "__main__":
     )
     args = parser.parse_args()
 
-    logger = logging.getLogger(__name__)
-    logger.setLevel(logging.DEBUG)
-    formatter = logging.Formatter("%(asctime)s - %(levelname)s - %(message)s")
-    ch = logging.StreamHandler()
-    ch.setLevel(level=logging.DEBUG if args.verbose else logging.INFO)
-    ch.setFormatter(formatter)
-    logger.addHandler(ch)
-
     # Some general checks
     cache_path: Path = args.source
     if not cache_path.is_dir():
@@ -94,31 +86,35 @@ if __name__ == "__main__":
     cache_stats = shutil.disk_usage(cache_path)
 
     usage_percentage = 100 * cache_stats.used / cache_stats.total
-    logger.info(
-        f"Uncaching from {cache_path} ({usage_percentage:.2f}% used) to {slow_path}."
+    syslog.syslog(
+        syslog.LOG_INFO,
+        f"Uncaching from {cache_path} ({usage_percentage:.2f}% used) to {slow_path}.",
     )
     if usage_percentage <= target:
-        logger.info(f"Target of {target}% of used capacity already reached. Exiting.")
+        syslog.syslog(
+            syslog.LOG_INFO,
+            f"Target of {target}% of used capacity already reached. Exiting.",
+        )
         exit(0)
 
-    logger.info("Computing candidates...")
+    syslog.syslog(syslog.LOG_INFO, "Computing candidates...")
     candidates = sorted(
         [(c, c.stat()) for c in cache_path.glob("**/*") if c.is_file()],
         key=lambda p: p[1].st_atime,
     )
 
     t_start = time.monotonic()
-    logger.info("Processing candidates...")
+    syslog.syslog(syslog.LOG_INFO, "Processing candidates...")
     cache_used = cache_stats.used
     for c_id, (c_path, c_stat) in enumerate(candidates):
-        logger.debug(f"{c_path}")
+        syslog.syslog(syslog.LOG_DEBUG, f"{c_path}")
 
         if not c_path.exists():
             # Since rsync moves also other hard links it might be that
             # some files are not existing anymore. However, invoking rsync
             # for each file (instead of directories) does not preserve
             # hard links.
-            logger.warning(f"{c_path} does not exist.")
+            syslog.syslog(syslog.LOG_WARNING, f"{c_path} does not exist.")
             continue
 
         # Rsync options
@@ -148,17 +144,24 @@ if __name__ == "__main__":
 
         # Evaluate early breaking conditions
         if last_id >= 0 and c_id >= last_id - 1:
-            logger.info(f"Maximum number of moved files reached ({last_id}).")
+            syslog.syslog(
+                syslog.LOG_INFO, f"Maximum number of moved files reached ({last_id})."
+            )
             break
         if time_limit >= 0 and time.monotonic() - t_start > time_limit:
-            logger.info(f"Time limit reached ({time_limit} seconds).")
+            syslog.syslog(
+                syslog.LOG_INFO, f"Time limit reached ({time_limit} seconds)."
+            )
             break
         if (100 * cache_used / cache_stats.total) <= target:
-            logger.info(f"Target of maximum used capacity reached ({target}).")
+            syslog.syslog(
+                syslog.LOG_INFO, f"Target of maximum used capacity reached ({target})."
+            )
             break
 
     cache_stats = shutil.disk_usage(cache_path)
     usage_percentage = 100 * cache_stats.used / cache_stats.total
-    logger.info(
-        f"Process completed in {round(time.monotonic() - t_start)} seconds. Current usage percentage is {usage_percentage:.2f}%."
+    syslog.syslog(
+        syslog.LOG_INFO,
+        f"Process completed in {round(time.monotonic() - t_start)} seconds. Current usage percentage is {usage_percentage:.2f}%.",
     )
