--- a/roles/homer/templates/config.yml.j2
+++ b/roles/homer/templates/config.yml.j2
@@ -81,6 +81,10 @@ services:
         logo: /assets/tools/homer-icons/pihole.png
         url: "http://192.168.1.2/admin"
         target: "_blank"
+      - name: "ispani.co"
+        logo: /assets/tools/homer-icons/ispanico.png
+        url: "https://ispani.co"
+        target: "_blank"
 
   - name: "ServArr"
     icon: "fas fa-search-dollar"
