--- a/roles/network/swag/templates/internal/cockpit.subdomain.conf.j2
+++ b/roles/network/swag/templates/internal/cockpit.subdomain.conf.j2
@@ -1,3 +1,4 @@
+# See: https://github.com/cockpit-project/cockpit/wiki/Proxying-Cockpit-over-NGINX
 server {
     {% include "nginx/internal.j2" %}
     {% include "nginx/params.j2" %}
@@ -10,7 +11,7 @@ server {
         include /config/nginx/resolver.conf;
         set $upstream_app 192.168.1.3;
         set $upstream_port 9090;
-        set $upstream_proto http;
+        set $upstream_proto https;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
 
     }
