--- a/roles/network/swag/templates/internal/jellyfin.subdomain.conf.j2
+++ b/roles/network/swag/templates/internal/jellyfin.subdomain.conf.j2
@@ -1,8 +1,7 @@
 server {
     {% include "nginx/internal.j2" %}
     {% include "nginx/params.j2" %}
-
-    server_name {{ web_applications['jellyfin']['url'] }};
+    server_name {{ swag_urls['jellyfin'] }};
 
 
     location / {
@@ -10,7 +9,7 @@ server {
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD';
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app {{ web_applications['jellyfin']['ip_address'] }};
+        set $upstream_app jellyfin;
         set $upstream_port 8096;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -21,7 +20,7 @@ server {
     location ~ (/jellyfin)?/socket {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app {{ web_applications['jellyfin']['ip_address'] }};
+        set $upstream_app jellyfin;
         set $upstream_port 8096;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
