--- a/roles/network/swag/templates/internal/syncthing.subdomain.conf.j2
+++ b/roles/network/swag/templates/internal/syncthing.subdomain.conf.j2
@@ -9,7 +9,7 @@ server {
         include /config/nginx/resolver.conf;
         set $upstream_app syncthing;
         set $upstream_port 8384;
-        set $upstream_proto https;
+        set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
 
     }
