--- a/roles/homer/templates/config.yml.j2
+++ b/roles/homer/templates/config.yml.j2
@@ -99,6 +99,7 @@ services:
       - name: "PiHole"
         logo: /assets/tools/homer-icons/pihole.png
         url: "http://192.168.1.2/admin"
+        apikey: "{{ homer_api_keys['PiHole'] }}"
         type: "PiHole"
         target: "_blank"
       - name: "ispani.co"
