Adding NUT as telegraf plugin

--- a/roles/monitoring/telegraf/templates/telegraf.conf.j2
+++ b/roles/monitoring/telegraf/templates/telegraf.conf.j2
@@ -306,3 +306,9 @@
   # fielddrop = ["uptime_format"]
 [[inputs.temp]]
   # no configuration
+[[inputs.upsd]]
+  ## A running NUT server to connect to.
+  # server = "127.0.0.1"
+  # port = 3493
+  username = "monitor"
+  password = "1q2w3e4r"
