Adding ebooks (readarr and calibre)

--- a/roles/network/swag/templates/dns-conf/cloudflare.ini.j2
+++ b/roles/network/swag/templates/dns-conf/cloudflare.ini.j2
@@ -1,1 +1,2 @@
-dns_cloudflare_api_token = {{ cloudflare_dns_token }}
+dns_cloudflare_email = {{ cloudflare_email }}
+dns_cloudflare_api_key = {{ cloudflare_dns_api_key }}
