--- a/roles/network/swag/templates/nginx/internal.j2
+++ b/roles/network/swag/templates/nginx/internal.j2
@@ -1,6 +1,5 @@
 
-    listen 443 ssl;
-    allow {{ lan_network }};
-    deny all;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     include /config/nginx/ssl.conf;
     client_max_body_size 0;
