feat: enabled 'attributes' on S.M.A.R.T. telegraf config

--- a/roles/monitoring/telegraf/templates/telegraf.conf.j2
+++ b/roles/monitoring/telegraf/templates/telegraf.conf.j2
@@ -275,7 +275,7 @@
 
     ## Gather all returned S.M.A.R.T. attribute metrics and the detailed
     ## information from each drive into the 'smart_attribute' measurement.
-    # attributes = false
+    attributes = true
 
     ## Optionally specify devices to exclude from reporting if disks auto-discovery is performed.
     # excludes = [ "/dev/pass6" ]
