--- a/roles/homer/templates/config.yml.j2
+++ b/roles/homer/templates/config.yml.j2
@@ -113,7 +113,7 @@ services:
         target: "_blank"
 
 # Switch to explicit media items because they're too much customized.
-  - name: "ServArr"
+  - name: "Serv"
     icon: "fas fa-search-dollar"
     items:
 {% for item in web_applications if "servarr" in item.category and item.name == "deluge" and item.url != "" %}
