--- a/roles/immich/templates/.env.j2
+++ b/roles/immich/templates/.env.j2
@@ -9,6 +9,8 @@ EXTERNAL_PATH="{{ mergerfs_root }}/Pictures/sara/PC-pers-immagini/01.Fotografie"
 # The Immich version to use. You can pin this to a specific version like "v1.71.0"
 IMMICH_VERSION=release
 
+MACHINE_LEARNING_WORKERS=1
+
 # Connection secret for postgres. You should change it to a random password
 DB_PASSWORD="{{ mysql_password }}"
 
