--- a/roles/swag/templates/nginx/internal.j2
+++ b/roles/swag/templates/nginx/internal.j2
@@ -1,5 +1,6 @@
 
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     include /config/nginx/ssl.conf;
     client_max_body_size 0;
