feat: adding Authelia, Nextcloud, UptimeKuma, Maxmind

--- a/roles/duplicati/templates/duplicati.subdomain.conf.j2
+++ b/roles/duplicati/templates/duplicati.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name duplicati.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ duplicati_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app duplicati;
+        set $upstream_app {{ duplicati_container_name }};
         set $upstream_port 8200;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
