--- a/roles/immich/templates/.env.j2
+++ b/roles/immich/templates/.env.j2
@@ -1,7 +1,7 @@
 # You can find documentation for all the supported env variables at https://immich.app/docs/install/environment-variables
 
 # The location where your uploaded files are stored
-UPLOAD_LOCATION="{{ cache_root }}/docker-volumes-cache/immich/upload/"
+UPLOAD_LOCATION="{{ mergerfs_root }}/docker-volumes-cache/immich/upload/"
 
 # Path to the existing library
 EXTERNAL_PATH="{{ mergerfs_root }}/Pictures/sara/PC-pers-immagini/01.Fotografie"
