--- a/roles/arm/templates/arm.subdomain.conf.j2
+++ b/roles/arm/templates/arm.subdomain.conf.j2
@@ -1,11 +1,12 @@
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name arm.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ arm_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app arm;
+        set $upstream_app {{ arm_container_name }};
         set $upstream_port 8080;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
