--- a/roles/deluge/templates/deluge.subdomain.conf.j2
+++ b/roles/deluge/templates/deluge.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name deluge.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ deluge_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app deluge;
+        set $upstream_app {{ deluge_container_name }};
         set $upstream_port 8112;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
