--- a/roles/handbrake/templates/handbrake.subdomain.conf.j2
+++ b/roles/handbrake/templates/handbrake.subdomain.conf.j2
@@ -1,11 +1,12 @@
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name handbrake.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ handbrake_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app handbrake;
+        set $upstream_app {{ handbrake_container_name }};
         set $upstream_port 5800;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
