--- a/roles/homer/templates/homer.subdomain.conf.j2
+++ b/roles/homer/templates/homer.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name {{ host_local }};
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ site_url }};
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app homer;
+        set $upstream_app {{ homer_container_name }};
         set $upstream_port 8080;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
