--- a/roles/immich/templates/immich.subdomain.conf.j2
+++ b/roles/immich/templates/immich.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name immich.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ immich_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app immich_server;
+        set $upstream_app {{ immich_container_name }}_server;
         set $upstream_port 3001;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -15,7 +16,7 @@ server {
     location ~ (/immich)?/api {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app immich_server;
+        set $upstream_app {{ immich_container_name }}_server;
         set $upstream_port 3001;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
