--- a/roles/invidious/templates/invidious.subdomain.conf.j2
+++ b/roles/invidious/templates/invidious.subdomain.conf.j2
@@ -1,13 +1,14 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name invidious.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ invidious_subdomain }}.*;
 
     access_log off;
     error_log /var/log/nginx/error.log crit;
 
     location / {
-        proxy_pass http://invidious:3000;
+        proxy_pass http://{{ invidious_container_name }}:3000;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;    # so Invidious knows domain
         proxy_http_version 1.1;     # to keep alive
