--- a/roles/lidarr/templates/lidarr.subdomain.conf.j2
+++ b/roles/lidarr/templates/lidarr.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name lidarr.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ lidarr_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app lidarr;
+        set $upstream_app {{ lidarr_container_name }};
         set $upstream_port 8686;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -15,7 +16,7 @@ server {
     location ~ (/lidarr)?/api {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app lidarr;
+        set $upstream_app {{ lidarr_container_name }};
         set $upstream_port 8686;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
