--- a/roles/prowlarr/templates/prowlarr.subdomain.conf.j2
+++ b/roles/prowlarr/templates/prowlarr.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name prowlarr.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ prowlarr_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app prowlarr;
+        set $upstream_app {{ prowlarr_container_name }};
         set $upstream_port 9696;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -15,7 +16,7 @@ server {
     location ~ (/prowlarr)?(/[0-9]+)?/api {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app prowlarr;
+        set $upstream_app {{ prowlarr_container_name }};
         set $upstream_port 9696;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -24,7 +25,7 @@ server {
     location ~ (/prowlarr)?(/[0-9]+)?/download {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app prowlarr;
+        set $upstream_app {{ prowlarr_container_name }};
         set $upstream_port 9696;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
