--- a/roles/radarr/templates/radarr.subdomain.conf.j2
+++ b/roles/radarr/templates/radarr.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name radarr.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ radarr_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app radarr;
+        set $upstream_app {{ radarr_container_name }};
         set $upstream_port 7878;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -15,7 +16,7 @@ server {
     location ~ (/radarr)?/api {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app radarr;
+        set $upstream_app {{ radarr_container_name }};
         set $upstream_port 7878;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
