--- a/roles/readarr/templates/readarr.subdomain.conf.j2
+++ b/roles/readarr/templates/readarr.subdomain.conf.j2
@@ -1,13 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name readarr.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
 
+    server_name {{ readarr_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app readarr;
+        set $upstream_app {{ readarr_container_name }};
         set $upstream_port 8787;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -16,7 +16,7 @@ server {
     location ~ (/readarr)?/api {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app readarr;
+        set $upstream_app {{ readarr_container_name }};
         set $upstream_port 8787;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
