--- a/roles/sonarr/templates/sonarr.subdomain.conf.j2
+++ b/roles/sonarr/templates/sonarr.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name sonarr.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ sonarr_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app sonarr;
+        set $upstream_app {{ sonarr_container_name }};
         set $upstream_port 8989;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
@@ -15,7 +16,7 @@ server {
     location ~ (/sonarr)?/api {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app sonarr;
+        set $upstream_app {{ sonarr_container_name }};
         set $upstream_port 8989;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
