--- a/roles/speedtest_tracker/templates/speedtest.subdomain.conf.j2
+++ b/roles/speedtest_tracker/templates/speedtest.subdomain.conf.j2
@@ -1,12 +1,13 @@
 ## Version 2024/07/16
 server {
-    {% include "roles/swag/templates/nginx/internal.j2" %}
-    server_name speedtest.*;
+    {% include "roles/swag/templates/nginx/common.j2" %}
+
+    server_name {{ speedtest_tracker_subdomain }}.*;
 
     location / {
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app speedtest_tracker;
+        set $upstream_app {{ speedtest_tracker_container_name }};
         set $upstream_port 80;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
