--- a/roles/homer/templates/config.yml.j2
+++ b/roles/homer/templates/config.yml.j2
@@ -87,7 +87,12 @@ services:
         type: "Healthchecks"
         apikey: "{{ healthchecks_api_ro_key }}"
         target: "_blank"
-{% for item in web_applications if "system" in item.category and item.name != "healthchecks" and item.url != "" %}
+      - name: "Uptime Kuma"
+        logo: /assets/tools/homer-icons/uptime_kuma.png
+        url: "{{ uptime_kuma_dashboard_url }}"
+        type: "UptimeKuma"
+        target: "_blank"
+{% for item in web_applications if "system" in item.category and item.name not in ["healthchecks", "uptime_kuma"] and item.url != "" %}
       - name: "{{ item.dashboard }}"
         logo: "{{ item.logo }}"
         url: "{{ item.url }}"
